--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "version": "3.0.0",
-  "name": "blog-by-ryosuke-uchitate",
-  "description": "Blog by Ryosuke Uchitate",
+  "name": "gatsby-starter-lumen",
+  "description": "A minimal, lightweight and mobile-first starter for creating blazing-fast static blogs",
   "main": "n/a",
   "scripts": {
     "develop": "yarn run clean && gatsby develop",
