--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test:coverage": "jest --coverage --config ./tests/jest-config.js",
     "test:watch": "jest --watch --config ./tests/jest-config.js"
   },
-  "repository": "https://github.com/b1a9id/gatsby-starter-lumen",
+  "repository": "https://github.com/alxshelepenok/gatsby-starter-lumen",
+  "author": "Alexander Shelepenok <alxshelepenok@gmail.com>",
   "license": "MIT",
   "keywords": [
     "gatsby",
