--- a/package.json
+++ b/package.json
@@ -37,71 +37,73 @@
     "disqus"
   ],
   "dependencies": {
-    "bluebird": "^3.5.2",
+    "bluebird": "^3.7.2",
     "classnames": "^2.2.6",
-    "codecov": "^3.1.0",
-    "gatsby": "^2.0.76",
-    "gatsby-link": "^2.0.8",
-    "gatsby-plugin-catch-links": "^2.0.9",
-    "gatsby-plugin-feed": "^2.0.11",
-    "gatsby-plugin-google-analytics": "^2.0.9",
-    "gatsby-plugin-manifest": "^2.0.13",
-    "gatsby-plugin-netlify": "^2.0.6",
-    "gatsby-plugin-netlify-cms": "^3.0.9",
-    "gatsby-plugin-offline": "^2.0.21",
-    "gatsby-plugin-react-helmet": "^3.0.5",
-    "gatsby-plugin-sass": "^2.0.7",
-    "gatsby-plugin-sharp": "^2.0.17",
-    "gatsby-plugin-sitemap": "^2.0.4",
-    "gatsby-remark-copy-linked-files": "^2.0.8",
-    "gatsby-remark-images": "^3.0.1",
-    "gatsby-remark-prismjs": "^3.2.0",
-    "gatsby-remark-relative-images": "^0.2.1",
-    "gatsby-remark-responsive-iframe": "^2.0.8",
-    "gatsby-remark-smartypants": "^2.0.7",
-    "gatsby-source-filesystem": "^2.0.16",
-    "gatsby-transformer-remark": "^2.2.0",
-    "gatsby-transformer-sharp": "^2.1.10",
+    "codecov": "^3.7.2",
+    "gatsby": "^2.24.50",
+    "gatsby-link": "^2.4.13",
+    "gatsby-plugin-catch-links": "^2.3.11",
+    "gatsby-plugin-feed": "^2.5.11",
+    "gatsby-plugin-google-analytics": "^2.3.13",
+    "gatsby-plugin-manifest": "^2.4.23",
+    "gatsby-plugin-netlify": "^2.3.13",
+    "gatsby-plugin-netlify-cms": "^4.3.11",
+    "gatsby-plugin-offline": "^3.2.25",
+    "gatsby-plugin-react-helmet": "^3.3.10",
+    "gatsby-plugin-sass": "^2.3.12",
+    "gatsby-plugin-sharp": "^2.6.27",
+    "gatsby-plugin-sitemap": "^2.4.11",
+    "gatsby-remark-copy-linked-files": "^2.3.12",
+    "gatsby-remark-images": "^3.3.27",
+    "gatsby-remark-prismjs": "^3.5.10",
+    "gatsby-remark-relative-images": "^0.3.0",
+    "gatsby-remark-responsive-iframe": "^2.4.12",
+    "gatsby-remark-smartypants": "^2.3.10",
+    "gatsby-source-filesystem": "^2.3.24",
+    "gatsby-transformer-remark": "^2.8.30",
+    "gatsby-transformer-sharp": "^2.5.13",
     "invariant": "^2.2.4",
-    "lodash": "^4.17.11",
-    "moment": "^2.23.0",
-    "netlify-cms": "^2.3.3",
-    "node-sass": "^4.11.0",
+    "katex": "^0.12.0",
+    "lodash": "^4.17.20",
+    "moment": "^2.27.0",
+    "netlify-cms": "^2.10.55",
+    "node-sass": "^4.14.1",
     "normalize-scss": "^7.0.1",
-    "prismjs": "^1.15.0",
-    "react": "^16.7.0",
+    "prismjs": "^1.21.0",
+    "react": "^16.13.1",
     "react-disqus-comments": "^1.4.0",
-    "react-dom": "^16.7.0",
-    "react-helmet": "^5.2.0"
+    "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/preset-react": "^7.0.0",
-    "autoprefixer": "^9.4.6",
-    "babel-core": "^7.0.0-0",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
-    "browserslist": "^4.4.1",
-    "concurrently": "^4.1.0",
-    "eslint": "^5.12.1",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^22.1.3",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-watch": "^4.0.2",
-    "gh-pages": "^2.0.1",
+    "@babel/core": "^7.10.5",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "autoprefixer": "^9.8.6",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.3.0",
+    "browserslist": "^4.13.0",
+    "concurrently": "^5.3.0",
+    "eslint": "^7.7.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^23.20.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-watch": "^7.0.0",
+    "gh-pages": "^3.1.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^23.6.0",
-    "jest-cli": "^23.6.0",
-    "lost": "^8.3.0",
-    "postcss-pxtorem": "^4.0.1",
-    "react-test-renderer": "^16.7.0",
-    "rimraf": "^2.6.3",
-    "stylelint": "^9.10.1",
-    "stylelint-config-recommended-scss": "^3.2.0",
-    "stylelint-scss": "^3.5.1"
+    "jest": "^26.4.2",
+    "jest-cli": "^26.4.2",
+    "lost": "^8.3.1",
+    "postcss-pxtorem": "^5.1.1",
+    "react-test-renderer": "^16.13.1",
+    "rimraf": "^3.0.2",
+    "stylelint": "^13.6.1",
+    "stylelint-config-recommended-scss": "^4.2.0",
+    "stylelint-scss": "^3.18.0"
   }
 }
