--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "katex": "^0.12.0",
     "lodash": "^4.17.20",
     "moment": "^2.27.0",
-    "netlify-cms": "^2.10.55",
+    "netlify-cms-app": "^2.12.19",
     "node-sass": "^4.14.1",
     "normalize-scss": "^7.0.1",
     "prismjs": "^1.21.0",
