--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "gatsby-plugin-sharp": "^2.6.27",
     "gatsby-plugin-sitemap": "^2.4.11",
     "gatsby-remark-copy-linked-files": "^2.3.12",
+    "gatsby-remark-embed-gist": "^1.2.1",
     "gatsby-remark-images": "^3.3.27",
     "gatsby-remark-prismjs": "^3.5.10",
     "gatsby-remark-relative-images": "^0.3.0",
