--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "gatsby-plugin-netlify": "^2.3.13",
     "gatsby-plugin-netlify-cms": "^4.3.11",
     "gatsby-plugin-offline": "^3.2.25",
+    "gatsby-plugin-postcss": "^3.6.0",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sass": "^3.1.0",
     "gatsby-plugin-sharp": "^2.6.27",
@@ -71,6 +72,7 @@
     "netlify-cms-app": "^2.12.19",
     "node-sass": "^5.0.0",
     "normalize-scss": "^7.0.1",
+    "postcss": "^8.2.4",
     "prismjs": "^1.21.0",
     "react": "^17.0.1",
     "react-disqus-comments": "^1.4.0",
